# Red

./: Cargo.toml  README.md  errors.txt  farley_fold.html  libmod.rlib  tmp_farley_pretty.html  watch.sh
src/: app.rs  lib.rs  main.rs  server.rs  style.css
src/api/: email.rs
src/components/: calendar.rs  editable_text.rs  mod.rs  rule_engine.rs
src/components/footer/: mod.rs
src/components/messenger/: mod.rs
src/components/navbar/: mod.rs
src/components/search/: mod.rs
src/components/tabs/: mod.rs
src/models/: action.rs  booking.rs  business_validation.rs  channel.rs  messenger.rs  mod.rs  order.rs  portfolio.rs  rule_engine.rs  service_task.rs  transaction.rs  user.rs
src/models/user/: activity.rs  mod.rs  organization.rs  payment.rs  permissions.rs  profile.rs  roles.rs  user.rs
src/pages/: agent.rs  calendar.rs  camscan.rs  email_valid.rs  history.rs  home.rs  login.rs  mod.rs  networking.rs  organization.rs  overview.rs  portfolios.rs  reporting.rs  settings.rs  transactions.rs
src/pages/agent/: agent_chat.rs  agent_controls.rs  agent_message.rs  agent_status.rs  mod.rs  page.rs
src/pages/calendar/: mod.rs
src/pages/history/: history_card.rs  history_filters.rs  history_list.rs  history_summary.rs  mod.rs  page.rs  undo_redo_dropdown.rs
src/pages/login/: auth_messages.rs  commits.rs  credential_controls.rs  login_form.rs  mod.rs  page.rs  register_form.rs  two_factor.rs
src/pages/networking/: channels.rs  contact_card.rs  contact_list.rs  external_orgs.rs  integrations.rs  mod.rs  networking_forms.rs  page.rs  partners.rs  relationship_history.rs
src/pages/organization/: member_card.rs  members.rs  mod.rs  organization_card.rs  organization_forms.rs  organization_list.rs  organization_summary.rs  page.rs  permissions.rs  portfolio_access.rs  role_card.rs  roles.rs
src/pages/portfolios/: add_portfolio_modal.rs  asset_channels.rs  asset_editor.rs  asset_group.rs  asset_item.rs  asset_viewer.rs  doc_dropdown.rs  doc_modal.rs  doc_slider.rs  mod.rs  notifications.rs  page.rs  portfolio_list.rs
src/pages/reporting/: booking_report.rs  mod.rs  page.rs  report_filters.rs  report_list.rs  report_summary.rs
src/pages/settings/: accessibility_settings.rs  account_settings.rs  api_test.rs  data_settings.rs  display_settings.rs  mod.rs  notification_settings.rs  page.rs  preset_selector.rs  security_settings.rs
src/pages/transactions/: approval_panel.rs  mod.rs  page.rs  transaction_card.rs  transaction_detail.rs  transaction_filters.rs  transaction_form.rs  transaction_list.rs  transaction_summary.rs
src/storage/: db.rs  mod.rs  rocks_db.rs
src/stores/: app_store.rs  calendar_store.rs  credentials.rs  messenger_store.rs  mod.rs  notifications.rs  organization_store.rs  portfolio_store.rs  rule_store.rs  search_store.rs  seed_data.rs  transaction_store.rs  ui_store.rs  undo_redo.rs
src/types/: common.rs
src/utils/: crypto.rs
