[package]
name = "farley"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["macros", "sync", "rt"], optional = true }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "v7", "serde", "js"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# Web Framework - Axum
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "fs"], optional = true }
tokio-stream = { version = "0.1", optional = true }
futures = "0.3"

# Frontend - Leptos
leptos = "0.8"
leptos_axum = { version = "0.8", optional = true }
leptos_router = "0.8"
leptos_meta = "0.8"

# WASM
cfg-if = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console", "Window", "Document", "Element", "HtmlElement", "Event", "EventTarget", "MouseEvent", "TouchEvent", "Touch", "TouchList", "InputEvent", "KeyboardEvent", "Storage", "Location", "History", "HtmlInputElement", "File", "FileList", "FileReader", "Blob", "HtmlCanvasElement", "CanvasRenderingContext2d", "ImageData", "Url", "HtmlVideoElement", "HtmlMediaElement", "Navigator", "MediaDevices", "MediaStream", "MediaStreamTrack", "MediaStreamConstraints"] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
gloo-timers = { version = "0.3", features = ["futures"] }
serde-wasm-bindgen = "0.6"

# PDF generation
printpdf = { version = "0.9", default-features = false, features = ["jpeg", "png"], optional = true }

# Search - Meilisearch
meilisearch-sdk = { version = "0.24", optional = true }

# Auth & Security
bcrypt = { version = "0.15", optional = true }
jsonwebtoken = { version = "9.2", optional = true }
argon2 = { version = "0.5", features = ["password-hash"] }
base64 = "0.22"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
getrandom_04 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }
chacha20poly1305 = { version = "0.10", optional = true }
totp-rs = { version = "5.6", optional = true, features = ["gen_secret", "otpauth"] }

# Async runtime
parking_lot = { version = "0.12", optional = true }
dashmap = { version = "5.5", optional = true }
sled = { version = "0.34", optional = true }
zstd = { version = "0.13", optional = true }

# HTTP client
reqwest = { version = "0.11", features = ["json"], optional = true }

# WASM-specific HTTP client
gloo-net = { version = "0.5", features = ["http"], optional = true }

[features]
default = []
hydrate = ["leptos/hydrate", "gloo-net", "chacha20poly1305"]
ssr = ["leptos/ssr", "leptos_axum", "leptos_router/ssr", "leptos_meta/ssr", "axum", "tower", "tower-http", "tokio-stream", "bcrypt", "jsonwebtoken", "meilisearch-sdk", "reqwest", "parking_lot", "dashmap", "sled", "zstd", "tracing-subscriber", "tokio", "tokio/rt-multi-thread", "tokio/net", "totp-rs", "printpdf", "chacha20poly1305"]
csr = ["leptos/csr"]

[[bin]]
name = "farley"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[package.metadata.leptos]
# The site root folder is where cargo-leptos generates all your assets
site-root = "target/site"
site-pkg-dir = "pkg"
# [Optional] The source CSS file. If it ends with .sass or .scss then it will compiled by dart-sass
style-file = "src/style.css"
# The name of the CSS file generated by cargo-leptos
output-name = "farley"
# Assets source dir. All files found here will be copied to the site-root unchanged
assets-dir = "public"
# The IP and port where the server serves the content.
# Use 0.0.0.0 to allow external connections, 127.0.0.1 for localhost only
site-addr = "0.0.0.0:3000"
# The port to use for automatic reload monitoring
reload-port = 3001
# Features to enable for the server (bin) target
bin-features = ["ssr"]
# Features to enable for the client (lib) target
lib-features = ["hydrate"]
